<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstPage"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/bgColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_your"
        android:textSize="25sp"
        android:minHeight="48dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/textBlue"/>

    <TextView

        android:layout_width="70dp"
        android:layout_height="55dp"
        android:text="@string/age"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/btnBgColor"
        android:layout_marginTop="10dp"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_minutes"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/textBlue"/>
    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/textBlue"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_date"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvDisplayDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        android:textAlignment="center"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/in_minutes_till_date"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tvMinuteDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/textBlue"/>
</LinearLayout>